Agregando formulario al proyecto

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-550-diagoona
                     <section class="tm-content tm-contact">
                         <h2 class="mb-4 tm-content-title">Contact Us</h2>
                         <p class="mb-85" style="font-size: 14px; font-style: italic;">I am a full-time employed professional and do not offer freelance services. I am available for professional networking, knowledge sharing, and collaboration within my field of expertise. If you would like to get in touch for job opportunities or potential collaborations, I would be delighted to hear from you!</p>
-                        <form id="contact-form" action="" method="POST">
+                        <form id="contact-form" action="mailto:marcosibottino@outlook.com" >
                             <div class="form-group mb-4">
                                 <input type="text" name="name" class="form-control" placeholder="Name" required="" />
                             </div>
